--- a/src/index.template.ejs
+++ b/src/index.template.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>sample-react-mobx</title>
+    <title>commit search</title>
     <style>
       body { margin: 0; }
     </style>
